@@ -1,3 +1,13 @@
+Version ?.?.? (tzdata v?????) - ??????????
+------------------------------------------
+
+* When comparing a TimeOrDateTime with another TimeOrDateTime with <=>, make 
+  sure any conversions performed on the passed in TimeOrDateTime are cached. 
+  Previously the TimeOrDateTime passed in would be converted to its original
+  form and then <=> would be called recursively. This could create a 
+  temporary TimeOrDateTime to be converted that would subsequently be 
+  discarded.
+
 Version 0.2.0 (tzdata v2006c) - 3-Apr-2006
 ------------------------------------------
 
